--- a/index.html
+++ b/index.html
@@ -5,11 +5,39 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/style.css"/>
     <title>Matt Profile</title>
 </head>
 <body>
-<div class="content">
+<div class="main-section">
+    <img class="profile-img" src="images/Matt.jpg"/>
 
+    <div class="main-section__member-content">
+        <h1 class="member-name">Matt Kovtun (ЖОСТРИКС)</h1>
+        <p class="member-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A asperiores beatae, commodi
+            dicta eveniet iste maiores perspiciatis repudiandae? Corporis laborum minima odit quia temporibus.
+            Asperiores consequatur deleniti dicta eius, est eum fugit illo in incidunt inventore ipsa laudantium, magnam
+            minima minus mollitia nemo, numquam perferendis placeat porro quas quod tempora unde! At consequuntur
+            corporis earum error in ipsa itaque odit soluta! Architecto consequuntur corporis cupiditate debitis earum,
+            fugit impedit molestiae nobis odio omnis, quae quibusdam quisquam ratione recusandae sunt? Assumenda at cum,
+            deserunt et eveniet ipsum labore laboriosam maiores maxime minima molestias mollitia nesciunt possimus quia
+            recusandae rerum soluta tempore.
+        </p>
+
+        <div class="main-section__member-content-two">
+            <div class="member-items">
+                <p class="member-items__item">Born on</p>
+                <p class="member-items__item">Born in</p>
+                <p class="member-items__item">Achievements</p>
+            </div>
+
+            <div class="member-items-description">
+                <p class="member-items-description__item">Lorem ipsum dolor sit amet.</p>
+                <p class="member-items-description__item">Lorem ipsum dolor sit amet.</p>
+                <p class="member-items-description__item">Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
