--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Matt Profile</title>
 </head>
 <body>
-<div class="main-section">
+<main class="main-section">
     <img class="profile-img" src="images/Matt.jpg"/>
 
     <div class="main-section__member-content">
@@ -38,6 +38,6 @@
             </div>
         </div>
     </div>
-</div>
+</main>
 </body>
 </html>
