added images directory and added `.profile` to html

--- a/index.html
+++ b/index.html
@@ -10,31 +10,33 @@
 </head>
 <body>
 <div class="main-section">
-    <img class="profile-img" src="images/Matt.jpg"/>
+    <div class="profile">
+        <img class="profile-img" src="images/Matt.jpg"/>
 
-    <div class="main-section__member-content">
-        <h1 class="member-name">Matt Kovtun (ЖОСТРИКС)</h1>
-        <p class="member-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A asperiores beatae, commodi
-            dicta eveniet iste maiores perspiciatis repudiandae? Corporis laborum minima odit quia temporibus.
-            Asperiores consequatur deleniti dicta eius, est eum fugit illo in incidunt inventore ipsa laudantium, magnam
-            minima minus mollitia nemo, numquam perferendis placeat porro quas quod tempora unde! At consequuntur
-            corporis earum error in ipsa itaque odit soluta! Architecto consequuntur corporis cupiditate debitis earum,
-            fugit impedit molestiae nobis odio omnis, quae quibusdam quisquam ratione recusandae sunt? Assumenda at cum,
-            deserunt et eveniet ipsum labore laboriosam maiores maxime minima molestias mollitia nesciunt possimus quia
-            recusandae rerum soluta tempore.
-        </p>
+        <div class="profile__member-content">
+            <h1 class="member-name">Matt Kovtun (ЖОСТРИКС)</h1>
+            <p class="member-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A asperiores beatae, commodi
+                dicta eveniet iste maiores perspiciatis repudiandae? Corporis laborum minima odit quia temporibus.
+                Asperiores consequatur deleniti dicta eius, est eum fugit illo in incidunt inventore ipsa laudantium, magnam
+                minima minus mollitia nemo, numquam perferendis placeat porro quas quod tempora unde! At consequuntur
+                corporis earum error in ipsa itaque odit soluta! Architecto consequuntur corporis cupiditate debitis earum,
+                fugit impedit molestiae nobis odio omnis, quae quibusdam quisquam ratione recusandae sunt? Assumenda at cum,
+                deserunt et eveniet ipsum labore laboriosam maiores maxime minima molestias mollitia nesciunt possimus quia
+                recusandae rerum soluta tempore.
+            </p>
 
-        <div class="main-section__member-content-two">
-            <div class="member-items">
-                <p class="member-items__item">Born on</p>
-                <p class="member-items__item">Born in</p>
-                <p class="member-items__item">Achievements</p>
-            </div>
+            <div class="profile__member-content-two">
+                <div class="member-items">
+                    <p class="member-items__item">Born on</p>
+                    <p class="member-items__item">Born in</p>
+                    <p class="member-items__item">Achievements</p>
+                </div>
 
-            <div class="member-items-description">
-                <p class="member-items-description__item">Lorem ipsum dolor sit amet.</p>
-                <p class="member-items-description__item">Lorem ipsum dolor sit amet.</p>
-                <p class="member-items-description__item">Lorem ipsum dolor sit amet.</p>
+                <div class="member-items-description">
+                    <p class="member-items-description__item">Lorem ipsum dolor sit amet.</p>
+                    <p class="member-items-description__item">Lorem ipsum dolor sit amet.</p>
+                    <p class="member-items-description__item">Lorem ipsum dolor sit amet.</p>
+                </div>
             </div>
         </div>
     </div>
